# wallpaper-engine-kde-rs

./: .gitignore  Cargo.toml  Makefile.toml  README.md  install.sh  metadata.desktop  rustfmt.toml  tool.sh
assets/wallpaper/: scene.json
plugin/contents/config/: main.xml
plugin/contents/ui/: config.qml  main.qml
src/: config.rs  lib.rs
src/brige/: mod.rs
src/brige/qtdeclarative_ext/: mod.rs  qquick_window.rs
src/brige/scene_node/: mod.rs  scene_material.hpp  (+1 more)
src/renderer/: mod.rs
wp_engine/: Cargo.toml
wp_engine/src/: error.rs  greeter.rs  lib.rs  qt_plugin.rs
wp_engine/src/renderer/scene_renderer/: consts.rs  image_renderer.rs  mod.rs
wp_engine/src/repkg/: byteorder_ext.rs  mod.rs  package.rs  package_loader.rs
wp_engine/src/repkg/package/: mod.rs  package.rs  package_entry.rs  package_entry_type.rs
wp_engine/src/repkg/tex/: constant.rs  free_image_format.rs  mipmap_format.rs  mod.rs  tex.rs  tex_flags.rs  tex_format.rs  tex_frame_info.rs  tex_frame_info_container.rs  tex_header.rs  tex_image.rs  tex_image_container.rs  tex_mipmap.rs
wp_engine/src/shader/: mod.rs  shader.rs  shader_type.rs
wp_engine/src/shader_preprocessor/: mod.rs
wp_engine/src/vfs/: mod.rs  scene_file.rs  scene_path.rs  scene_vfs.rs  scene_vfs_error.rs
wp_engine/src/wpscene/: mod.rs  wp_scene.rs  wp_scene_camera.rs  wp_scene_general.rs
wp_engine/src/wpscene/wp_scene_object/: mod.rs  wp_image_effect.rs  wp_image_object.rs  wp_material.rs  wp_particle_object.rs
wp_engine_bridge/: Cargo.toml  Makefile.toml  build.rs
wp_engine_bridge/src/: lib.rs  utils.rs
(+39 files in other folders)
